# actix-mongodb-connect

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/db/: model.rs
src/logs_handler/: mod.rs
src/routes/: test.rs
