[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2"
actix-http = "2"
actix-rt = "2"
actix-cors = "0.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
serde_derive = "1"
futures = "0.3"
rand = "0.8"

[dependencies.actix-web]
version = "3.3"