[package]
name = "algo-study-server-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
mongodb = "1.0.0"
bson = "1.0.0"
futures = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
